--- a/Game.html
+++ b/Game.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="body">
-        <div id="scoreBox">Score: 0</div>
-        <div id="hiscoreBox">HiScore: 0</div>
-        <div id="board"></div>
+        <div id="scoreBoxes">Score: 0</div>
+        <div id="hiscoreBoxes">Hi-Score: 0</div>
+        <div id="boards"></div>
       
     </div>
     
